avances flujo 6 y arregle tema imagenes dinamicas